added pop up file

--- a/Never-Gonna-Let-You-Browse-Extension/frontend/index.css
+++ b/Never-Gonna-Let-You-Browse-Extension/frontend/index.css
@@ -50,7 +50,7 @@ p{
 }
 
 
-/*circle overlay for profile pic*/
+/* overlay for profile pic*/
 .profile-circle {
   position: absolute;
   top: 25vh;
